2016-02-02  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from master
	2016-02-02  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/19542
	* elf64-x86-64.c (elf_x86_64_convert_load): Store the estimated
	distances in the compressed_size field of the output section.

2016-02-01  John David Anglin  <danglin@gcc.gnu.org>

	PR ld/19526
	* elf32-hppa.c (elf32_hppa_final_link): Don't sort non-regular output
	files.
	* elf64-hppa.c (elf32_hppa_final_link): Likewise.  Remove retval.

2016-01-25  Tristan Gingold  <gingold@adacore.com>

	* version.m4: Bump version to 2.26.0
	* configure: Regenerate.

2016-01-25  Tristan Gingold  <gingold@adacore.com>

	* version.m4: Bump version to 2.26
	* configure: Regenerate.

2016-01-14  Alan Modra  <amodra@gmail.com>

	PR ld/19421
	PR ld/4317
	* elflink.c (elf_link_input_bfd): Revert 2015-02-19 changes.
	(elf_link_output_extsym): Likewise.

2016-01-11  Jiong Wang  <jiong.wang@arm.com>

	Apply from master

	2016-01-08  Richard Sandiford  <richard.sandiford@arm.com>
		    Jiong Wang  <jiong.wang@arm.com>

	PR ld/19368
	* elf32-arm.c (elf32_arm_reloc_type_class): Map R_ARM_IRELATIVE to
	reloc_class_ifunc.

2016-01-06  Maciej W. Rozycki  <macro@imgtec.com>

	Apply from master.
	2016-01-04  Maciej W. Rozycki  <macro@imgtec.com>
	* elfxx-mips.c (mips_elf_merge_obj_attributes): Propagate the
	return status from `_bfd_elf_merge_object_attributes'.

2015-12-11  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	Apply from master.
	2015-11-19  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	PR ld/19263
	* elf32-s390.c (elf_s390_gc_sweep_hook): Add null ptr check.
	* elf64-s390.c (elf_s390_check_relocs): Port the GOTOFF handling
	over from the 32 bit code.
	(elf_s390_relocate_section): Likewise.

2015-12-10  Alan Modra  <amodra@gmail.com>

	Apply from master.
	2015-12-07  Alan Modra  <amodra@gmail.com>
	* elf32-ppc.c (ppc_elf_check_relocs): Don't error on local ifunc
	plt call.  Wrap long lines.
	(ppc_elf_relocate_section): Wrap long lines.